# scratchpad

./: .gitignore  README.md
rust/args/: Cargo.toml
rust/args/src/: main.rs
rust/buffered_read/: Cargo.toml
rust/buffered_read/src/: main.rs
rust/clap/: Cargo.toml
rust/clap/src/: main.rs
rust/codegen/: Cargo.toml
rust/collections/: Cargo.toml
rust/collections/src/: main.rs
rust/crates/: Cargo.toml
rust/crates/src/: main.rs
rust/csv/: Cargo.toml
rust/csv/src/: main.rs
rust/curl/: Cargo.toml
rust/curl/src/: main.rs
rust/envs/: Cargo.toml
rust/envs/src/: main.rs
rust/exit_codes/: Cargo.toml
rust/exit_codes/src/: main.rs
rust/hof/: Cargo.toml
rust/input/: Cargo.toml
rust/input/src/: main.rs
rust/json/: Cargo.toml
rust/json/src/: main.rs  serde_types.in.rs
rust/json_struct/: Cargo.toml
rust/json_struct/src/: main.rs
rust/move_semantics/: Cargo.toml
rust/move_semantics/src/: main.rs
rust/os_sniffer/: Cargo.toml
rust/os_sniffer/src/: main.rs
rust/ownership/: Cargo.toml
rust/ownership/src/: main.rs
rust/rando/: Cargo.toml
rust/rando/src/: main.rs
rust/read_file/: Cargo.toml
rust/read_file/src/: main.rs
rust/references_borrowing/: Cargo.toml
rust/references_borrowing/src/: main.rs
rust/regex_doodles/: Cargo.toml
rust/regex_doodles/src/: main.rs
rust/slices/: Cargo.toml
rust/slices/src/: main.rs
rust/strings/: Cargo.toml
rust/strings/src/: main.rs
rust/syllables/: Cargo.toml
rust/syllables/src/: main.rs
rust/terminal/: Cargo.toml
rust/test_fixtures/: Cargo.toml
rust/url/: Cargo.toml
(+4 files in other folders)
