[package]
name = "json"
version = "0.1.0"
authors = ["booyaa <booyaabooyaabooyaa@gmail.com>"]
build = "build.rs"

[features]
default = ["serde_codegen"]
unstable = ["serde_macros"]

[build-dependencies]
serde_codegen = { version = "0.8", optional = true }

[dependencies]
serde = "0.8"
serde_json = "0.8"
serde_macros = { version = "0.8", optional = true }
